# UninexusHR

./: Doc_uninexusHR.md  context.md  dummy.json  package-lock.json
backend/: .env  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 0afa4a043f8f_add_industry_column_to_organizations.py  265d203ff6d8_add_category_to_permissions.py  41ab16c275ff_update_user_organization_role.py  55ba1b0ac5a4_add_organization_industry_and_user_org_.py  5b1438f54e9c_create_user_organizations_table.py  79539c1736f4_add_invited_by_to_invitations.py  a38ee54a7dd6_initial_migration.py  f5b2c3d4e5a6_add_organization_id_to_user_roles.py
backend/app/: main.py  utils.py
backend/app/api/: deps.py
backend/app/core/: config.py  deps.py  security.py
backend/app/crud/: __init__.py  base.py  crud_invitation.py  crud_member.py  crud_organization.py  crud_role.py  crud_user.py  organization.py  permission.py  role.py  user.py
backend/app/db/: base.py  base_class.py
backend/app/models/: __init__.py  associations.py  base.py  enums.py  invitation.py  join_request.py  organization.py  permission.py  role.py  user.py  user_organization.py
backend/app/schemas/: __init__.py  invitation.py  join_request.py  member.py  organization.py  permission.py  role.py  user.py
backend/app/utils/: __init__.py  email.py  permissions.py  security.py  token.py
backend/scripts/: create_superuser.py  create_tables.py  init_db.sh  setup_db.sh
backend/uninexushr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .gitignore  (+5 more)
(+54 files in other folders)
