[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uninexushr"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "pydantic-settings",
    "pydantic[email]",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
